 + (Commands) Added new info command /mmoinfo or /mcinfo
 + (Commands) Added toggle command /mcchatspy
 + (API) Added many missing SubSkills to SubSkillType class
 + (Permissions) Added permission node mcmmo.commands.mcchatspy & mcmmo.commands.mcchatspy.others
 + (Permissions) Added permission nodes for Harvest Lumber, Splinter, Nature's Bounty, and Bark Surgeon
 + (Locale) Added locale strings for new Woodcutting abilities
 + (Locale) Added locale strings for mcchatspy command
 + (Locale) Added locale strings for JSON integration
 + (Locale) Added locale strings for Taming's Pummel SubSkill
 + (Locale) Added locale strings for Unarmed's Block Cracker SubSkill
 - (Locale) Removed localizations with the following codes for being almost empty: id, HR_hr, et_EE, lv, lt, no, pl_PL, pt_PT, tr_TR
 - (Config) Removed SkillShot's IncreaseLevel & IncreasePercentage (replaced by RankDamageMultiplier)
 - (Config) Removed AxeMastery's MaxBonus & MaxBonusLevel (replaced by RankDamageMultiplier)
 = (Skills) Added missing mushroom blocks to experience.yml defaults
 = (Skills) Tridents will no longer be considered unarmed
 = (MySQL) You can now inspect offline players
 ! (Party) Party member list will only include members of the party that you can see (aren't vanished)
 ! (Skills) mcMMO skills will now be on a scale from 1-100 instead of 0-1000 (for existing mcMMO installs this is opt-in and off by default)
 ! (Skills) Skill Super Powers (Tree Feller, etc...) will now require level 10+ to use
 ! (Skills) Acrobatics' Roll exploit detection was tweaked to still allow for Roll to trigger even if it rewards no XP
 ! (Skills) Acrobatics' Roll & Gracefull Roll are now considered the same skill (both mechanics are still there)
 ! (Skills) Woodcutting's Double Drop subskill is now named Harvest Lumber
 ! (Skills) Archery's Skill Shot now uses a rank system
 ! (Skills) Axe's Axe Mastery now uses a rank system
 ! (Config) Unarmed.IronArm in advanced.yml is now Unarmed.IronArmStyle